style.css
/* ... */
.content{
    min-height: 100vh;
    margin-left: 300px;
    overflow-y: auto;
    width: calc(100% - 300px);
    background-color: var(--bg-content);
}

.content::-webkit-scrollbar {
    width: 5px;
}

.content::-webkit-scrollbar-track {
    background: none;
}

.content::-webkit-scrollbar-thumb {
    background-color: rgba(0, 0, 0, 0.5);
    border-radius: 10px;
}

@media only screen and (max-width: 767px) { 
    .horizontal-menu {
        display: inline-flex;
        padding: 0 5px;

        div {
            margin: 0 auto;
        }

    }

    .sidebar {
        transform: translateX(-100%);
        transition: transform 0.3s ease-in-out;
        width: 300px;
        z-index: 1000;

        .collapse-sidebar {
            display: block;
        }
    }

    .sidebar.active {
        transform: translateX(0);
    }

    .content {
        margin-left: 0;
        width: 100dvw;
    }
    .content::-webkit-scrollbar {
        display: none;
    }
}

@media only screen 
    and (min-width: 768px)
    and (max-width: 1023px)
    and (-webkit-min-device-pixel-ratio: 1) {
    .horizontal-menu {
        display: inline-flex;
        
        div {
            margin: 0 auto;
        }
    }

    .sidebar {
        transform: translateX(-100%);
        transition: transform 0.3s ease-in-out;
        width: 300px;
        z-index: 1000;

        .collapse-sidebar {
            display: block;
        }
    }


    .sidebar.active {
        transform: translateX(0);
    }

    .content {
        margin-left: 0;
        width: 100dvw;
        overflow-x: hidden;
    }

    .content::-webkit-scrollbar {
        display: none;
    }
}

.right-terminal{
    width: 100%;
    height: 100vh;
    padding: 25px;
    display: flex;
    align-items: center;
    justify-content: center;
    background: url("./src/assets/home-bg-img.webp");
    background-size: cover;
    background-position: center;
    overflow-y: hidden;
    font-family: "Inter", sans-serif;
}

.hero-container {
    width: 100%;
    display: flex;
}

.recruitment-status{
    width: 100%;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: flex-start;
    color: #111827;
    font-family: "Inter", sans-serif;

    .status-body{
        width: 100%;
        display: flex;
        align-items: center;
        justify-content: flex-start;
        background-color: var(--bg-home-content);
        backdrop-filter: blur(4x);
        color: #334155;
        padding: 7.5px 15px;
        border-radius: 12.5px;
        margin-bottom: 15px;
    }

    .actively-looking{
        font-size: 30px;
        font-weight: bold;
    }
}

.header-container {
    width: 100%;
    font-size: 44px;
    background-color: var(--bg-home-content);
    backdrop-filter: blur(4x);
    padding: 7.5px 15px;
    border-radius: 12.5px;
    margin-bottom: 15px;

    span {
        color: #3B82F6;
    }
}

.home-description {
    width: 100%;
    background-color: var(--bg-home-content);
    backdrop-filter: blur(4x);
    padding: 7.5px 15px;
    border-radius: 12px;
    font-size: 20px;
    margin-bottom: 15px;
}

.home-buttons {
    width: 100%;
    display: inline-flex;
    justify-content: flex-start;
}

.project-section {
    text-decoration: none;
    color: var(--btn-hover-color);
    font-size: 18px;
    font-weight: bold;
    background-color: var(--bg-btn-second-grey);
    padding: 10px 15px;
    border-radius: 7px;
    transition: all 0.3s ease;
    border: 2.5px solid var(--btn-hover-color);
    margin-right: 15px;
    transition: transform 0.3s ease;
}
.project-section:hover {
    transform: translateY(-2.5px);
}


.notification-status{
    height: 18px;
    width: 18px;
    border-radius: 50%;
    margin-right: 15px;
    border: 2px solid transparent;
    animation: flicker 1s infinite alternate;
}

@keyframes flicker {
    0% { background-color: #00cc00; box-shadow: 0 0 4px #00cc00; }
    50% { background-color: #00ff00; box-shadow: 0 0 10px #00ff00, 0 0 15px #00ff00;}
    100% { background-color: #00cc00; box-shadow: 0 0 4px #00cc00; }
}

.typewriter{
    width: 100%;
    display: flex;
    align-items: center;
    justify-content: center;

    img {
        height: 300px;
        width: 300px;
        border-radius: 50%;
        border: 3px solid var(--bg-btn-second-grey);
    }
}

@media only screen and (max-width: 767px) {
    .right-terminal {
        width: 100dvw;
        min-height: 100dvh;
        max-height: max-content;
        height: 100%;
        padding: 10px;
    }

    .hero-container {
        flex-direction: column;
    }

    .recruitment-status {
        margin-top: 60px;
        margin-bottom: 10px;
        font-family: "Inter", sans-serif;

        .actively-looking {
            font-size: 22px;
        }
    }

    .header-container {
        font-size: 26px;
    }

    .project-section,
    .resume-download {
        font-size: 16px;
    }

    .notification-status {
        height: 16px;
        width: 16px;
        margin-right: 10px;
    }

    .typewriter {
        margin-block: 15px;
    }
}

@media only screen 
    and (min-width: 768px)
    and (max-width: 1024px) {

        .right-terminal {
            width: 100vw;
            min-height: 100dvh;
            max-height: max-content;
            height: 100%;
            padding: 10px;
            overflow-x: hidden;
        }
    
        .recruitment-status {
            margin: 75px auto 10px 10px;
            font-family: "Roboto", sans-serif;
        }

        .header-container {
            font-size: 36px;
        }
}
/* ... */

